syntax = "proto3";

package ConsoLovers.Ipc;
option csharp_namespace = "ConsoLovers.Ipc.Grpc";

service ResultService
{
	rpc ResultChanged(ResultChangedRequest) returns (stream ResultChangedResponse);
}

message ResultChangedRequest 
{    
	string client_name = 1;
}

message ResultChangedResponse 
{    
	int32 exit_code= 1;
	
	string message = 2;

	map<string, string> data = 3;
}

